adds errorprone plugin