@@ -58,11 +58,27 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.6.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <compilerId>javac-with-errorprone</compilerId>
+                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.plexus</groupId>
+                        <artifactId>plexus-compiler-javac-errorprone</artifactId>
+                        <version>2.8.1</version>
+                    </dependency>
+                    <!-- override plexus-compiler-javac-errorprone's dependency on
+                         Error Prone with the latest version -->
+                    <dependency>
+                        <groupId>com.google.errorprone</groupId>
+                        <artifactId>error_prone_core</artifactId>
+                        <version>2.0.17</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -116,6 +132,51 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--<plugin>-->
+            <!--<groupId>com.akathist.maven.plugins.launch4j</groupId>-->
+            <!--<artifactId>launch4j-maven-plugin</artifactId>-->
+            <!--<version>1.7.15</version>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>l4j-clui</id>-->
+            <!--<phase>package</phase>-->
+            <!--<goals>-->
+            <!--<goal>launch4j</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<headerType>console</headerType>-->
+            <!--<outfile>target/usigner.exe</outfile>-->
+            <!--&lt;!&ndash;<icon>icon.ico</icon>&ndash;&gt;-->
+            <!--<jar>target/uber-apk-signer-${project.version}.jar</jar>-->
+            <!--<errTitle>uber-apk-signer</errTitle>-->
+            <!--<classPath>-->
+            <!--<mainClass>at.favre.tools.apksigner.SignTool</mainClass>-->
+            <!--<addDependencies>true</addDependencies>-->
+            <!--<preCp>anything</preCp>-->
+            <!--</classPath>-->
+            <!--<jre>-->
+            <!--<minVersion>1.8.0</minVersion>-->
+            <!--<opts>-->
+            <!--<opt>-Djava.endorsed.dirs=./endorsed</opt>-->
+            <!--</opts>-->
+            <!--</jre>-->
+            <!--<versionInfo>-->
+            <!--<fileVersion>0.0.0.1</fileVersion>-->
+            <!--<txtFileVersion>0.0.0.1</txtFileVersion>-->
+            <!--<fileDescription>A tool that enables advanced features through adb-->
+            <!--</fileDescription>-->
+            <!--<copyright>Patrick Favre-Bulle, 2016</copyright>-->
+            <!--<productVersion>${project.version}.0</productVersion>-->
+            <!--<txtProductVersion>${project.version}</txtProductVersion>-->
+            <!--<productName>Uber Apk Signer</productName>-->
+            <!--<internalName>uber-apk-signer</internalName>-->
+            <!--<originalFilename>usigner.exe</originalFilename>-->
+            <!--<language>EN</language>-->
+            <!--</versionInfo>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 
